// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Debate component > hides New Turn and renders cooldown message correctly 1`] = `
<section
  data-testid="debate-section"
>
  <h1>
    Wait for Cooldown
  </h1>
  <ul
    class="_list_7264fa"
  >
    <li
      class="_card_f5603a m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      style="--paper-radius: var(--mantine-radius-lg);"
    >
      <div>
        
          
        <h3>
          Didn't melt fairer keepsakes since Fellowship elsewhere.
        </h3>
        
          
        <p>
          Woodlands payment 
          <a
            href="#"
          >
            Osgiliath
          </a>
           tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman's call?
        </p>
        
          
        <h4>
          Tad survive ensnare joy mistake courtesy Bagshot Row.
        </h4>
        
          
        <p>
          Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble'll sleeping during jump Narsil.
        </p>
        
          
        <h3>
          North valor overflowing sort Iáve mister kingly money?
        </h3>
        
          
        <p>
          Curse you and all the halflings! Deserted anytime Lake-town burned caves balls. Smoked lthilien forbids Thrain?
        </p>
        
          
        <ul>
          
            
          <li>
            Adamant.
          </li>
          
            
          <li>
            Southfarthing!
          </li>
          
            
          <li>
            Witch-king.
          </li>
          
            
          <li>
            Precious.
          </li>
          
            
          <li>
            Gaffer's!
          </li>
          
          
        </ul>
        
          
        <ul>
          
            
          <li>
            Excuse tightening yet survives two cover Undómiel city ablaze.
          </li>
          
            
          <li>
            Keepsakes deeper clouds Buckland position 21 lied bicker fountains ashamed.
          </li>
          
            
          <li>
            Women rippling cold steps rules Thengel finer.
          </li>
          
            
          <li>
            Portents close Havens endured irons hundreds handle refused sister?
          </li>
          
            
          <li>
            Harbor Grubbs fellas riddles afar!
          </li>
          
          
        </ul>
        
          
        <h3>
          Narsil enjoying shattered bigger leaderless retrieve dreamed dwarf.
        </h3>
        
          
        <p>
          Ravens wonder wanted runs me crawl gaining lots faster! Khazad-dum surprise baby season ranks. I bid you all a very fond farewell.
        </p>
        
          
        <ol>
          
            
          <li>
            Narsil.
          </li>
          
            
          <li>
            Elros.
          </li>
          
            
          <li>
            Arwen Evenstar.
          </li>
          
            
          <li>
            Maggot's?
          </li>
          
            
          <li>
            Bagginses?
          </li>
          
          
        </ol>
        
          
        <ol>
          
            
          <li>
            Concerning Hobbits l golf air fifth bell prolonging camp.
          </li>
          
            
          <li>
            Grond humble rods nearest mangler.
          </li>
          
            
          <li>
            Enormity Lórien merry gravy stayed move.
          </li>
          
            
          <li>
            Diversion almost notion furs between fierce laboring Nazgûl ceaselessly parent.
          </li>
          
            
          <li>
            Agree ruling um wasteland Bagshot Row expect sleep.
          </li>
          
          
        </ol>
        
          
        <h3>
          Ere answering track forests shards roof!
        </h3>
        
          
        <p>
          Delay freezes Gollum. Let the Ring-bearer decide. Bagshot Row chokes pole pauses immediately orders taught éored musing three-day? Disease rune repel source fire Goblinses already?
        </p>
        
          
        <table>
          
            
          <thead>
            
              
            <tr>
              
                
              <th />
              
                
              <th>
                Dangers
              </th>
              
                
              <th>
                Playing
              </th>
              
                
              <th>
                Window
              </th>
              
                
              <th>
                Meaning
              </th>
              
                
              <th>
                Pace
              </th>
              
              
            </tr>
            
            
          </thead>
          
            
          <tbody>
            
              
            <tr>
              
                
              <td>
                Current
              </td>
              
                
              <td>
                living
              </td>
              
                
              <td>
                odds
              </td>
              
                
              <td>
                charged
              </td>
              
                
              <td>
                heads
              </td>
              
                
              <td>
                felt
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Inn
              </td>
              
                
              <td>
                climbing
              </td>
              
                
              <td>
                destroying
              </td>
              
                
              <td>
                overhead
              </td>
              
                
              <td>
                roll
              </td>
              
                
              <td>
                mud
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Breath
              </td>
              
                
              <td>
                relevant
              </td>
              
                
              <td>
                éored
              </td>
              
                
              <td>
                hinges
              </td>
              
                
              <td>
                year
              </td>
              
                
              <td>
                signed
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Accept
              </td>
              
                
              <td>
                threads
              </td>
              
                
              <td>
                name
              </td>
              
                
              <td>
                fitted
              </td>
              
                
              <td>
                precious
              </td>
              
                
              <td>
                attacked
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Chief
              </td>
              
                
              <td>
                sails
              </td>
              
                
              <td>
                first-born
              </td>
              
                
              <td>
                pottery
              </td>
              
                
              <td>
                lever
              </td>
              
                
              <td>
                antagonize
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Unoccupied
              </td>
              
                
              <td>
                victorious
              </td>
              
                
              <td>
                means
              </td>
              
                
              <td>
                lovely
              </td>
              
                
              <td>
                humble
              </td>
              
                
              <td>
                force
              </td>
              
              
            </tr>
            
            
          </tbody>
          
            
          <tfoot>
            
              
            <tr>
              
                
              <td>
                kinsmen
              </td>
              
                
              <td>
                give
              </td>
              
                
              <td>
                walking
              </td>
              
                
              <td>
                thousand
              </td>
              
                
              <td>
                manners
              </td>
              
                
              <td>
                burning
              </td>
              
              
            </tr>
            
            
          </tfoot>
          
          
        </table>
        
          
        <h4>
          Afraid smithy Fellowship debt carven hooks.
        </h4>
        
          
        <p>
          What about second breakfast? Nags runt near Lindir lock discover level? Andûril breathe waited flatten union.
        </p>
        
          
        <blockquote>
          
            
          <p>
            You shall be the Fellowship of the Ring.
          </p>
          
            
          <footer>
            —Númenor, 
            <cite>
              sweeter burned verse
            </cite>
          </footer>
          
          
        </blockquote>
        
          
        <h5>
          Should Shirelings extraordinary spends poison's willing enchantment.
        </h5>
        
          
        <p>
          I think we should get off the road. Penalty sight splintered Misty Mountain mithril? Unrest lasts rode league bears absence Bracegirdle athletic contract nice parent slowed?
        </p>
        
          
        <pre>
          Pardon Concerning Hobbits rune goblins? Twitching figure including rightful Thorin's level! Worth tubers threats Hornburg deadliest? Unfold thumping shh wants Homely!
        </pre>
        
          
        <h6>
          Improve drops absolutely tight deceit potent Treebeard startled!
        </h6>
        
          
        <p>
          J.R.R. Tolkien 3000 uttered veins 
          <q>
            roaring winds moaning flaming
          </q>
          . Meddle 
          <ins>
            measure pure
          </ins>
           Samwise Gamgee business! 
          <sub>
            Lied
          </sub>
           mistake Proudfoots pon. Instance 80 
          <dfn>
            morbid ceremonial plunge
          </dfn>
           Anor mad. Questions shells hangs noble Proudfoots 
          <var>
            throws
          </var>
          . 
          <mark>
            Rampart damage
          </mark>
           questions Chubbs 3000 conjurer? Single tempt peasants 
          <strong>
            Bolg Athelas Mordor Wraiths Azog Undómiel
          </strong>
           mangler? 
          <samp>
            Nori Giants Undómiel Rivendell
          </samp>
           spike posts took. Fool's Underhill boarded 
          <cite>
            vanishing twilight unheard-of
          </cite>
          . 
          <abbr>
            Presence
          </abbr>
           Dunland lamb lair. Barricade 
          <sup>
            didn't
          </sup>
           feelings purring vine Morgoth. Distract Giants nearing champion 
          <kbd>
            T
          </kbd>
          . Clothing titles quick bother 
          <em>
            Arod Gloin Beren
          </em>
           troop? Balls crashing bastards 
          <small>
            arrives precisely rascal
          </small>
           stubbornness Snowbourn. Hobbitses rose barren 
          <a>
            strengths tested mirrors moonlight password
          </a>
           center? Remade 
          <x-code>
            free filthy
          </x-code>
           breaking respect amuse Arod? Vengeance 
          <del>
            Elessar Wolves
          </del>
           posts remain doorway said! 
          <time>
            Suspects
          </time>
           fight Merry hungers locked yelp.
        </p>
        
          
        <hr />
        
          
        <dl>
          
            
          <dt>
            Abandon
          </dt>
          
            
          <dd>
            Tact flies disturber thinking hospitality Elros act vest handy ranks.
          </dd>
          
            
          <dt>
            Devil
          </dt>
          
            
          <dd>
            Boneses spilled Caradhras hungry pace lanterns glory haunted shone forging.
          </dd>
          
            
          <dd>
            Unprotected Beorn's fireworks dream journey beacon dwells gnaws key.
          </dd>
          
            
          <dt>
            Happened
          </dt>
          
            
          <dd>
            Known wanna fifth Bill hell knew she scale.
          </dd>
          
            
          <dd>
            Missing vanish taken colleague sway voice tricks 13 Grimbold.
          </dd>
          
            
          <dd>
            Thereof skills kingsfoil innocent riding light Thorin Oakenshield won.
          </dd>
          
          
        </dl>
      </div>
    </li>
    <li
      class="_card_f5603a _opponentCard_f5603a m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      style="--paper-radius: var(--mantine-radius-lg);"
    >
      <div>
        
            
        <p>
          Didn't melt fairer keepsakes since Fellowship elsewhere.
        </p>
        
            
        <p>
          Woodlands payment 
          <a
            href="#"
          >
            Osgiliath
          </a>
           tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman's call?
        </p>
        
            
        <p>
          Tad survive ensnare joy mistake courtesy Bagshot Row.
        </p>
        
            
        <p>
          Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble'll sleeping during jump Narsil.
        </p>
        
            
        <p>
          North valor overflowing sort Iáve mister kingly money?
        </p>
        
            
        <p>
          Curse you and all the halflings! Deserted anytime Lake-town burned caves balls. Smoked lthilien forbids Thrain?
        </p>
        
            
        <ul>
          
              
          <li>
            Adamant.
          </li>
          
              
          <li>
            Southfarthing!
          </li>
          
              
          <li>
            Witch-king.
          </li>
          
              
          <li>
            Precious.
          </li>
          
              
          <li>
            Gaffer's!
          </li>
          
            
        </ul>
        
            
        <ul>
          
              
          <li>
            Excuse tightening yet survives two cover Undómiel city ablaze.
          </li>
          
              
          <li>
            Keepsakes deeper clouds Buckland position 21 lied bicker fountains ashamed.
          </li>
          
              
          <li>
            Women rippling cold steps rules Thengel finer.
          </li>
          
              
          <li>
            Portents close Havens endured irons hundreds handle refused sister?
          </li>
          
              
          <li>
            Harbor Grubbs fellas riddles afar!
          </li>
          
            
        </ul>
        
            
        <p>
          Ravens wonder wanted runs me crawl gaining lots faster! Khazad-dum surprise baby season ranks. I bid you all a very fond farewell.
        </p>
        
            
        <ol>
          
              
          <li>
            Narsil.
          </li>
          
              
          <li>
            Elros.
          </li>
          
              
          <li>
            Arwen Evenstar.
          </li>
          
              
          <li>
            Maggot's?
          </li>
          
              
          <li>
            Bagginses?
          </li>
          
            
        </ol>
        
            
        <ol>
          
              
          <li>
            Concerning Hobbits l golf air fifth bell prolonging camp.
          </li>
          
              
          <li>
            Grond humble rods nearest mangler.
          </li>
          
              
          <li>
            Enormity Lórien merry gravy stayed move.
          </li>
          
              
          <li>
            Diversion almost notion furs between fierce laboring Nazgûl ceaselessly parent.
          </li>
          
              
          <li>
            Agree ruling um wasteland Bagshot Row expect sleep.
          </li>
          
            
        </ol>
        
            
        <p>
          Delay freezes Gollum. Let the Ring-bearer decide. Bagshot Row chokes pole pauses immediately orders taught éored musing three-day? Disease rune repel source fire Goblinses already?
        </p>
        
            
        <p>
          What about second breakfast? Nags runt near Lindir lock discover level? Andûril breathe waited flatten union.
        </p>
        
            
        <blockquote>
          
              
          <p>
            You shall be the Fellowship of the Ring.
          </p>
          
              
          <footer>
            —Númenor, 
            <cite>
              sweeter burned verse
            </cite>
          </footer>
          
            
        </blockquote>
        
            
        <p>
          I think we should get off the road. Penalty sight splintered Misty Mountain mithril? Unrest lasts rode league bears absence Bracegirdle athletic contract nice parent slowed?
        </p>
        
            
        <pre>
          Pardon Concerning Hobbits rune goblins? Twitching figure including rightful Thorin's level! Worth tubers threats Hornburg deadliest? Unfold thumping shh wants Homely!
        </pre>
        
            
        <h6>
          Improve drops absolutely tight deceit potent Treebeard startled!
        </h6>
        
            
        <p>
          J.R.R. Tolkien 3000 uttered veins 
          <q>
            roaring winds moaning flaming
          </q>
          . Meddle 
          <ins>
            measure pure
          </ins>
           Samwise Gamgee business! 
          <sub>
            Lied
          </sub>
           mistake Proudfoots pon. Instance 80 
          <dfn>
            morbid ceremonial plunge
          </dfn>
           Anor mad. Questions shells hangs noble Proudfoots 
          <var>
            throws
          </var>
          . 
          <mark>
            Rampart damage
          </mark>
           questions Chubbs 3000 conjurer? Single tempt peasants 
          <strong>
            Bolg Athelas Mordor Wraiths Azog Undómiel
          </strong>
           mangler? 
          <samp>
            Nori Giants Undómiel Rivendell
          </samp>
           spike posts took. Fool's Underhill boarded 
          <cite>
            vanishing twilight unheard-of
          </cite>
          . 
          <abbr>
            Presence
          </abbr>
           Dunland lamb lair. Barricade 
          <sup>
            didn't
          </sup>
           feelings purring vine Morgoth. Distract Giants nearing champion 
          <kbd>
            T
          </kbd>
          . Clothing titles quick bother 
          <em>
            Arod Gloin Beren
          </em>
           troop? Balls crashing bastards 
          <small>
            arrives precisely rascal
          </small>
           stubbornness Snowbourn. Hobbitses rose barren 
          <a>
            strengths tested mirrors moonlight password
          </a>
           center? Remade 
          <x-code>
            free filthy
          </x-code>
           breaking respect amuse Arod? Vengeance 
          <del>
            Elessar Wolves
          </del>
           posts remain doorway said! 
          <time>
            Suspects
          </time>
           fight Merry hungers locked yelp.
        </p>
        
            
        <hr />
        
            
        <dl>
          
              
          <dt>
            Abandon
          </dt>
          
              
          <dd>
            Tact flies disturber thinking hospitality Elros act vest handy ranks.
          </dd>
          
              
          <dt>
            Devil
          </dt>
          
              
          <dd>
            Boneses spilled Caradhras hungry pace lanterns glory haunted shone forging.
          </dd>
          
              
          <dd>
            Unprotected Beorn's fireworks dream journey beacon dwells gnaws key.
          </dd>
          
              
          <dt>
            Happened
          </dt>
          
              
          <dd>
            Known wanna fifth Bill hell knew she scale.
          </dd>
          
              
          <dd>
            Missing vanish taken colleague sway voice tricks 13 Grimbold.
          </dd>
          
              
          <dd>
            Thereof skills kingsfoil innocent riding light Thorin Oakenshield won.
          </dd>
          
            
        </dl>
      </div>
    </li>
  </ul>
  <div
    aria-describedby="alert_debate_cooldown-body"
    class="m_66836ed3 mantine-Alert-root"
    data-variant="light"
    id="alert_debate_cooldown"
    role="alert"
    style="--alert-radius: var(--mantine-radius-lg); --alert-bg: rgba(125, 62, 201, 0.1); --alert-color: #7d3ec9; --alert-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent; margin-block: calc(1.25rem * var(--mantine-scale));"
  >
    <div
      class="m_a5d60502 mantine-Alert-wrapper"
    >
      <div
        class="m_667c2793 mantine-Alert-body"
      >
        <div
          class="m_7fa78076 mantine-Alert-message"
          data-variant="light"
          id="alert_debate_cooldown-body"
        >
          The cooldown period is active. 
          You can start your next turn at 5:25:01 AM. In the meantime, why not read over the previous turns? You never know what you might've missed!
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Debate component > renders correctly 1`] = `
<section
  data-testid="debate-section"
>
  <h1>
    Your turn
  </h1>
  <ul
    class="_list_7264fa"
  >
    <li
      class="_card_f5603a m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      style="--paper-radius: var(--mantine-radius-lg);"
    >
      <div>
        
          
        <h3>
          Didn't melt fairer keepsakes since Fellowship elsewhere.
        </h3>
        
          
        <p>
          Woodlands payment 
          <a
            href="#"
          >
            Osgiliath
          </a>
           tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman's call?
        </p>
        
          
        <h4>
          Tad survive ensnare joy mistake courtesy Bagshot Row.
        </h4>
        
          
        <p>
          Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble'll sleeping during jump Narsil.
        </p>
        
          
        <h3>
          North valor overflowing sort Iáve mister kingly money?
        </h3>
        
          
        <p>
          Curse you and all the halflings! Deserted anytime Lake-town burned caves balls. Smoked lthilien forbids Thrain?
        </p>
        
          
        <ul>
          
            
          <li>
            Adamant.
          </li>
          
            
          <li>
            Southfarthing!
          </li>
          
            
          <li>
            Witch-king.
          </li>
          
            
          <li>
            Precious.
          </li>
          
            
          <li>
            Gaffer's!
          </li>
          
          
        </ul>
        
          
        <ul>
          
            
          <li>
            Excuse tightening yet survives two cover Undómiel city ablaze.
          </li>
          
            
          <li>
            Keepsakes deeper clouds Buckland position 21 lied bicker fountains ashamed.
          </li>
          
            
          <li>
            Women rippling cold steps rules Thengel finer.
          </li>
          
            
          <li>
            Portents close Havens endured irons hundreds handle refused sister?
          </li>
          
            
          <li>
            Harbor Grubbs fellas riddles afar!
          </li>
          
          
        </ul>
        
          
        <h3>
          Narsil enjoying shattered bigger leaderless retrieve dreamed dwarf.
        </h3>
        
          
        <p>
          Ravens wonder wanted runs me crawl gaining lots faster! Khazad-dum surprise baby season ranks. I bid you all a very fond farewell.
        </p>
        
          
        <ol>
          
            
          <li>
            Narsil.
          </li>
          
            
          <li>
            Elros.
          </li>
          
            
          <li>
            Arwen Evenstar.
          </li>
          
            
          <li>
            Maggot's?
          </li>
          
            
          <li>
            Bagginses?
          </li>
          
          
        </ol>
        
          
        <ol>
          
            
          <li>
            Concerning Hobbits l golf air fifth bell prolonging camp.
          </li>
          
            
          <li>
            Grond humble rods nearest mangler.
          </li>
          
            
          <li>
            Enormity Lórien merry gravy stayed move.
          </li>
          
            
          <li>
            Diversion almost notion furs between fierce laboring Nazgûl ceaselessly parent.
          </li>
          
            
          <li>
            Agree ruling um wasteland Bagshot Row expect sleep.
          </li>
          
          
        </ol>
        
          
        <h3>
          Ere answering track forests shards roof!
        </h3>
        
          
        <p>
          Delay freezes Gollum. Let the Ring-bearer decide. Bagshot Row chokes pole pauses immediately orders taught éored musing three-day? Disease rune repel source fire Goblinses already?
        </p>
        
          
        <table>
          
            
          <thead>
            
              
            <tr>
              
                
              <th />
              
                
              <th>
                Dangers
              </th>
              
                
              <th>
                Playing
              </th>
              
                
              <th>
                Window
              </th>
              
                
              <th>
                Meaning
              </th>
              
                
              <th>
                Pace
              </th>
              
              
            </tr>
            
            
          </thead>
          
            
          <tbody>
            
              
            <tr>
              
                
              <td>
                Current
              </td>
              
                
              <td>
                living
              </td>
              
                
              <td>
                odds
              </td>
              
                
              <td>
                charged
              </td>
              
                
              <td>
                heads
              </td>
              
                
              <td>
                felt
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Inn
              </td>
              
                
              <td>
                climbing
              </td>
              
                
              <td>
                destroying
              </td>
              
                
              <td>
                overhead
              </td>
              
                
              <td>
                roll
              </td>
              
                
              <td>
                mud
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Breath
              </td>
              
                
              <td>
                relevant
              </td>
              
                
              <td>
                éored
              </td>
              
                
              <td>
                hinges
              </td>
              
                
              <td>
                year
              </td>
              
                
              <td>
                signed
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Accept
              </td>
              
                
              <td>
                threads
              </td>
              
                
              <td>
                name
              </td>
              
                
              <td>
                fitted
              </td>
              
                
              <td>
                precious
              </td>
              
                
              <td>
                attacked
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Chief
              </td>
              
                
              <td>
                sails
              </td>
              
                
              <td>
                first-born
              </td>
              
                
              <td>
                pottery
              </td>
              
                
              <td>
                lever
              </td>
              
                
              <td>
                antagonize
              </td>
              
              
            </tr>
            
              
            <tr>
              
                
              <td>
                Unoccupied
              </td>
              
                
              <td>
                victorious
              </td>
              
                
              <td>
                means
              </td>
              
                
              <td>
                lovely
              </td>
              
                
              <td>
                humble
              </td>
              
                
              <td>
                force
              </td>
              
              
            </tr>
            
            
          </tbody>
          
            
          <tfoot>
            
              
            <tr>
              
                
              <td>
                kinsmen
              </td>
              
                
              <td>
                give
              </td>
              
                
              <td>
                walking
              </td>
              
                
              <td>
                thousand
              </td>
              
                
              <td>
                manners
              </td>
              
                
              <td>
                burning
              </td>
              
              
            </tr>
            
            
          </tfoot>
          
          
        </table>
        
          
        <h4>
          Afraid smithy Fellowship debt carven hooks.
        </h4>
        
          
        <p>
          What about second breakfast? Nags runt near Lindir lock discover level? Andûril breathe waited flatten union.
        </p>
        
          
        <blockquote>
          
            
          <p>
            You shall be the Fellowship of the Ring.
          </p>
          
            
          <footer>
            —Númenor, 
            <cite>
              sweeter burned verse
            </cite>
          </footer>
          
          
        </blockquote>
        
          
        <h5>
          Should Shirelings extraordinary spends poison's willing enchantment.
        </h5>
        
          
        <p>
          I think we should get off the road. Penalty sight splintered Misty Mountain mithril? Unrest lasts rode league bears absence Bracegirdle athletic contract nice parent slowed?
        </p>
        
          
        <pre>
          Pardon Concerning Hobbits rune goblins? Twitching figure including rightful Thorin's level! Worth tubers threats Hornburg deadliest? Unfold thumping shh wants Homely!
        </pre>
        
          
        <h6>
          Improve drops absolutely tight deceit potent Treebeard startled!
        </h6>
        
          
        <p>
          J.R.R. Tolkien 3000 uttered veins 
          <q>
            roaring winds moaning flaming
          </q>
          . Meddle 
          <ins>
            measure pure
          </ins>
           Samwise Gamgee business! 
          <sub>
            Lied
          </sub>
           mistake Proudfoots pon. Instance 80 
          <dfn>
            morbid ceremonial plunge
          </dfn>
           Anor mad. Questions shells hangs noble Proudfoots 
          <var>
            throws
          </var>
          . 
          <mark>
            Rampart damage
          </mark>
           questions Chubbs 3000 conjurer? Single tempt peasants 
          <strong>
            Bolg Athelas Mordor Wraiths Azog Undómiel
          </strong>
           mangler? 
          <samp>
            Nori Giants Undómiel Rivendell
          </samp>
           spike posts took. Fool's Underhill boarded 
          <cite>
            vanishing twilight unheard-of
          </cite>
          . 
          <abbr>
            Presence
          </abbr>
           Dunland lamb lair. Barricade 
          <sup>
            didn't
          </sup>
           feelings purring vine Morgoth. Distract Giants nearing champion 
          <kbd>
            T
          </kbd>
          . Clothing titles quick bother 
          <em>
            Arod Gloin Beren
          </em>
           troop? Balls crashing bastards 
          <small>
            arrives precisely rascal
          </small>
           stubbornness Snowbourn. Hobbitses rose barren 
          <a>
            strengths tested mirrors moonlight password
          </a>
           center? Remade 
          <x-code>
            free filthy
          </x-code>
           breaking respect amuse Arod? Vengeance 
          <del>
            Elessar Wolves
          </del>
           posts remain doorway said! 
          <time>
            Suspects
          </time>
           fight Merry hungers locked yelp.
        </p>
        
          
        <hr />
        
          
        <dl>
          
            
          <dt>
            Abandon
          </dt>
          
            
          <dd>
            Tact flies disturber thinking hospitality Elros act vest handy ranks.
          </dd>
          
            
          <dt>
            Devil
          </dt>
          
            
          <dd>
            Boneses spilled Caradhras hungry pace lanterns glory haunted shone forging.
          </dd>
          
            
          <dd>
            Unprotected Beorn's fireworks dream journey beacon dwells gnaws key.
          </dd>
          
            
          <dt>
            Happened
          </dt>
          
            
          <dd>
            Known wanna fifth Bill hell knew she scale.
          </dd>
          
            
          <dd>
            Missing vanish taken colleague sway voice tricks 13 Grimbold.
          </dd>
          
            
          <dd>
            Thereof skills kingsfoil innocent riding light Thorin Oakenshield won.
          </dd>
          
          
        </dl>
      </div>
    </li>
    <li
      class="_card_f5603a _opponentCard_f5603a m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      style="--paper-radius: var(--mantine-radius-lg);"
    >
      <div>
        
            
        <p>
          Didn't melt fairer keepsakes since Fellowship elsewhere.
        </p>
        
            
        <p>
          Woodlands payment 
          <a
            href="#"
          >
            Osgiliath
          </a>
           tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman's call?
        </p>
        
            
        <p>
          Tad survive ensnare joy mistake courtesy Bagshot Row.
        </p>
        
            
        <p>
          Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble'll sleeping during jump Narsil.
        </p>
        
            
        <p>
          North valor overflowing sort Iáve mister kingly money?
        </p>
        
            
        <p>
          Curse you and all the halflings! Deserted anytime Lake-town burned caves balls. Smoked lthilien forbids Thrain?
        </p>
        
            
        <ul>
          
              
          <li>
            Adamant.
          </li>
          
              
          <li>
            Southfarthing!
          </li>
          
              
          <li>
            Witch-king.
          </li>
          
              
          <li>
            Precious.
          </li>
          
              
          <li>
            Gaffer's!
          </li>
          
            
        </ul>
        
            
        <ul>
          
              
          <li>
            Excuse tightening yet survives two cover Undómiel city ablaze.
          </li>
          
              
          <li>
            Keepsakes deeper clouds Buckland position 21 lied bicker fountains ashamed.
          </li>
          
              
          <li>
            Women rippling cold steps rules Thengel finer.
          </li>
          
              
          <li>
            Portents close Havens endured irons hundreds handle refused sister?
          </li>
          
              
          <li>
            Harbor Grubbs fellas riddles afar!
          </li>
          
            
        </ul>
        
            
        <p>
          Ravens wonder wanted runs me crawl gaining lots faster! Khazad-dum surprise baby season ranks. I bid you all a very fond farewell.
        </p>
        
            
        <ol>
          
              
          <li>
            Narsil.
          </li>
          
              
          <li>
            Elros.
          </li>
          
              
          <li>
            Arwen Evenstar.
          </li>
          
              
          <li>
            Maggot's?
          </li>
          
              
          <li>
            Bagginses?
          </li>
          
            
        </ol>
        
            
        <ol>
          
              
          <li>
            Concerning Hobbits l golf air fifth bell prolonging camp.
          </li>
          
              
          <li>
            Grond humble rods nearest mangler.
          </li>
          
              
          <li>
            Enormity Lórien merry gravy stayed move.
          </li>
          
              
          <li>
            Diversion almost notion furs between fierce laboring Nazgûl ceaselessly parent.
          </li>
          
              
          <li>
            Agree ruling um wasteland Bagshot Row expect sleep.
          </li>
          
            
        </ol>
        
            
        <p>
          Delay freezes Gollum. Let the Ring-bearer decide. Bagshot Row chokes pole pauses immediately orders taught éored musing three-day? Disease rune repel source fire Goblinses already?
        </p>
        
            
        <p>
          What about second breakfast? Nags runt near Lindir lock discover level? Andûril breathe waited flatten union.
        </p>
        
            
        <blockquote>
          
              
          <p>
            You shall be the Fellowship of the Ring.
          </p>
          
              
          <footer>
            —Númenor, 
            <cite>
              sweeter burned verse
            </cite>
          </footer>
          
            
        </blockquote>
        
            
        <p>
          I think we should get off the road. Penalty sight splintered Misty Mountain mithril? Unrest lasts rode league bears absence Bracegirdle athletic contract nice parent slowed?
        </p>
        
            
        <pre>
          Pardon Concerning Hobbits rune goblins? Twitching figure including rightful Thorin's level! Worth tubers threats Hornburg deadliest? Unfold thumping shh wants Homely!
        </pre>
        
            
        <h6>
          Improve drops absolutely tight deceit potent Treebeard startled!
        </h6>
        
            
        <p>
          J.R.R. Tolkien 3000 uttered veins 
          <q>
            roaring winds moaning flaming
          </q>
          . Meddle 
          <ins>
            measure pure
          </ins>
           Samwise Gamgee business! 
          <sub>
            Lied
          </sub>
           mistake Proudfoots pon. Instance 80 
          <dfn>
            morbid ceremonial plunge
          </dfn>
           Anor mad. Questions shells hangs noble Proudfoots 
          <var>
            throws
          </var>
          . 
          <mark>
            Rampart damage
          </mark>
           questions Chubbs 3000 conjurer? Single tempt peasants 
          <strong>
            Bolg Athelas Mordor Wraiths Azog Undómiel
          </strong>
           mangler? 
          <samp>
            Nori Giants Undómiel Rivendell
          </samp>
           spike posts took. Fool's Underhill boarded 
          <cite>
            vanishing twilight unheard-of
          </cite>
          . 
          <abbr>
            Presence
          </abbr>
           Dunland lamb lair. Barricade 
          <sup>
            didn't
          </sup>
           feelings purring vine Morgoth. Distract Giants nearing champion 
          <kbd>
            T
          </kbd>
          . Clothing titles quick bother 
          <em>
            Arod Gloin Beren
          </em>
           troop? Balls crashing bastards 
          <small>
            arrives precisely rascal
          </small>
           stubbornness Snowbourn. Hobbitses rose barren 
          <a>
            strengths tested mirrors moonlight password
          </a>
           center? Remade 
          <x-code>
            free filthy
          </x-code>
           breaking respect amuse Arod? Vengeance 
          <del>
            Elessar Wolves
          </del>
           posts remain doorway said! 
          <time>
            Suspects
          </time>
           fight Merry hungers locked yelp.
        </p>
        
            
        <hr />
        
            
        <dl>
          
              
          <dt>
            Abandon
          </dt>
          
              
          <dd>
            Tact flies disturber thinking hospitality Elros act vest handy ranks.
          </dd>
          
              
          <dt>
            Devil
          </dt>
          
              
          <dd>
            Boneses spilled Caradhras hungry pace lanterns glory haunted shone forging.
          </dd>
          
              
          <dd>
            Unprotected Beorn's fireworks dream journey beacon dwells gnaws key.
          </dd>
          
              
          <dt>
            Happened
          </dt>
          
              
          <dd>
            Known wanna fifth Bill hell knew she scale.
          </dd>
          
              
          <dd>
            Missing vanish taken colleague sway voice tricks 13 Grimbold.
          </dd>
          
              
          <dd>
            Thereof skills kingsfoil innocent riding light Thorin Oakenshield won.
          </dd>
          
            
        </dl>
      </div>
    </li>
  </ul>
  <div
    aria-describedby="alert_debate_cooldown-body"
    class="m_66836ed3 mantine-Alert-root"
    data-variant="light"
    id="alert_debate_cooldown"
    role="alert"
    style="--alert-radius: var(--mantine-radius-lg); --alert-bg: rgba(125, 62, 201, 0.1); --alert-color: #7d3ec9; --alert-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent; margin-block: calc(1.25rem * var(--mantine-scale));"
  >
    <div
      class="m_a5d60502 mantine-Alert-wrapper"
    >
      <div
        class="m_667c2793 mantine-Alert-body"
      >
        <div
          class="m_7fa78076 mantine-Alert-message"
          data-variant="light"
          id="alert_debate_cooldown-body"
        >
          The cooldown period is active. 
          You can start your next turn at 5:25:01 AM. In the meantime, why not read over the previous turns? You never know what you might've missed!
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Debate component > renders invite link screen correctly 1`] = `
<section
  data-testid="invite-section"
>
  <h2>
    Invite Your Opponent to Join this Debate
  </h2>
  <div
    class="m_18320242 mantine-Skeleton-root"
    data-animate="true"
  >
    <p>
      Share the link below with your opponent, so they can join and start the debate!
    </p>
  </div>
  <div
    class="m_18320242 mantine-Skeleton-root"
    data-animate="true"
    style="--skeleton-height: calc(3.4375rem * var(--mantine-scale));"
  >
    <div
      aria-describedby="alert_invite_link-body"
      class="m_66836ed3 mantine-Alert-root"
      data-variant="light"
      id="alert_invite_link"
      role="alert"
      style="--alert-radius: var(--mantine-radius-lg); --alert-bg: rgba(125, 62, 201, 0.1); --alert-color: #7d3ec9; --alert-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent; margin-block: calc(1.25rem * var(--mantine-scale));"
    >
      <div
        class="m_a5d60502 mantine-Alert-wrapper"
      >
        <div
          class="m_667c2793 mantine-Alert-body"
        >
          <div
            class="m_7fa78076 mantine-Alert-message"
            data-variant="light"
            id="alert_invite_link-body"
          >
            Remember, this invite link will expire after being used once.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="m_18320242 mantine-Skeleton-root"
    data-animate="true"
    data-visible="true"
    style="--skeleton-height: calc(2.25rem * var(--mantine-scale)); --skeleton-radius: var(--mantine-radius-sm);"
  />
</section>
`;

exports[`Debate component > renders join debate screen correctly 1`] = `
<section
  data-testid="join-section"
>
  <h2>
    Join this Debate
  </h2>
  <p>
    You have been invited to join this debate. Click below to join.
  </p>
  <form>
    <input
      id="debateId"
      name="debateId"
      type="hidden"
      value="5"
    />
    <input
      id="opponentSub"
      name="opponentSub"
      type="hidden"
      value="auth0|1234567890abcdefghij1234"
    />
    <p
      aria-live="polite"
    />
    <button
      class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      data-variant="filled"
      style="--button-radius: var(--mantine-radius-md); --button-bg: var(--mantine-color-marble-filled); --button-hover: var(--mantine-color-marble-filled-hover); --button-color: var(--mantine-color-white); --button-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent; flex-shrink: 0;"
      type="submit"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Join
        </span>
      </span>
    </button>
  </form>
</section>
`;
